--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -125,4 +125,8 @@
       .page-content
         .clearfix
         .content
+          - flash.each do |key, value|
+            %div{class: "alert alert-#{key}"}
+              = value
           = yield
+          = debug(params) if Rails.env.development?
