add total distance

--- a/app/assets/stylesheets/template/style.css.scss
+++ b/app/assets/stylesheets/template/style.css.scss
@@ -4445,7 +4445,7 @@ form legend,
   margin-bottom: 7px;
   width: 60%;
   white-space: nowrap;
-  overflow: hidden;
+  // overflow: hidden;
   text-overflow: ellipsis;
 }
 .grid-title h4 i {
