--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -55,6 +55,7 @@
 %div
   = react_component "Home",
     carsOverviewPath: cars_overview_home_index_path,
+    carsStatisticsPath: car_statistics_path,
     carsIndexPath: home_index_path,
     pinIcon: image_path('red_pin.png')
   / = react_router 'Home', 'HistoryLocation'
