Add green icon for car

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -57,7 +57,9 @@
     carsOverviewPath: cars_overview_home_index_path,
     carsStatisticsPath: car_statistics_path,
     carsIndexPath: home_index_path,
-    pinIcon: image_path('red_pin.png')
+    pinIcon: image_path('red_pin.png'),
+    parkingIcon: image_path('map-icons/parking_icon.png'),
+    carIcon: image_path('map-icons/car_icon.png')
   / = react_router 'Home', 'HistoryLocation'
 
 
