--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -59,7 +59,8 @@
     carsIndexPath: home_index_path,
     pinIcon: image_path('red_pin.png'),
     parkingIcon: image_path('map-icons/parking_icon.png'),
-    carIcon: image_path('map-icons/car_icon.png')
+    carIcon: image_path('map-icons/car_icon.png'),
+    emptyIcon: image_path('map-icons/empty_icon.png')
   / = react_router 'Home', 'HistoryLocation'
 
 
