--- a/app/assets/stylesheets/template/responsive.css.scss
+++ b/app/assets/stylesheets/template/responsive.css.scss
@@ -265,11 +265,11 @@ and (min-width : 1824px) {
 	}
 
 	.page-sidebar{
-		 background-color: #0aa699 !important;
+		 background-color: #22262e !important;
 	}
 	.page-sidebar .page-sidebar-wrapper > ul > li >a:hover,
 	.page-sidebar .page-sidebar-wrapper > ul > li:hover >a {
-		background: #0b9c8f;
+		background: #22262e;
 	}
 	.page-sidebar .page-sidebar-wrapper > ul > li.open > a, .page-sidebar .page-sidebar-wrapper > ul > li > a:hover, .page-sidebar .page-sidebar-wrapper > ul > li:hover > a{
 		padding: 13px;
