--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -129,4 +129,4 @@
             %div{class: "alert alert-#{key}"}
               = value
           = yield
-          =# debug(params) if Rails.env.development?
+          //=# debug(params) if Rails.env.development?
