--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -63,8 +63,7 @@
     emptyIcon: image_path('map-icons/empty_icon.png')
   / = react_router 'Home', 'HistoryLocation'
 
-/ %div= debug(@notifications)
-
+/ %div= debug Rails.application.config.inspect
 
 
 
